# mug

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md  spec.md
docs/: contributing.md  index.md  troubleshooting.md
docs/concepts/: build-pipeline.md  content-model.md  project-layout.md
docs/getting-started/: installation.md  quickstart.md  tutorial.md
docs/guides/: archives.md  authoring.md  collections.md  data.md  deployment.md  drafts.md  macros.md  migration.md  permalinks.md  related.md  taxonomies.md  templates.md  themes.md  wikilinks.md
docs/proposals/: atproto-pds.md  perf.md  related.md
docs/reference/: cli.md  config.md  frontmatter.md  templates.md
examples/: gen_fixtures.rs  looking_glass.yaml
notes/: creatives-vs-creators.md  docs-outline.md  documentation-plan.md  hugo-template-filters.md  hugo-themes.md  phases.md  ssg-perf.md
notes/proposals/: 2026-06-13-aliases.md  2026-06-13-gap-analisys.md  assets.md
scaffold/: config.yaml
scaffold/archives/: posts.html  rss.xml  tags.html
scaffold/content/: backlinks.md  digital-garden.md  index.md  sitemap.html  wikilinks.md
scaffold/content/posts/: hello.md
scaffold/generators/: rss.xml  sitemap.xml
scaffold/templates/: archive.html  base.html  home.html  post.html  sitemap.xml  tag.html
scaffold/themes/obsidian/: config.yaml
scaffold/themes/obsidian/templates/: base.html  index.html  note.html
src/: backlinks.rs  build.rs  command.rs  config.rs  copy.rs  defaults.rs  doc.rs  doc_index.rs  generate.rs  generator.rs  html.rs  index.rs  lib.rs  main.rs  markup.rs  permalink.rs  query.rs  read.rs  related.rs  report.rs  scaffold.rs  serve.rs  site_data.rs  taxonomy.rs  template.rs  tera_env.rs  test_util.rs  watch.rs  wikilink.rs
src/command/: clean.rs  new.rs  scaffold.rs  serve.rs  watch.rs
src/tera_env/: all.rs  backlinks.rs  collection.rs  dictsort.rs  dir.rs  dirtree.rs  doc.rs  entries.rs  filter_by_id_path.rs  filter_in_dir.rs  group.rs  macros.rs  markdown.rs  omit_docs.rs  query.rs  taxonomy.rs  text.rs  url.rs
tests/: build.rs
tests/fixtures/01_skeleton/expected/: hello.html
tests/fixtures/03_templates/content/: post.md
tests/fixtures/03_templates/expected/: post.html
tests/fixtures/03_templates/templates/: base.html
tests/fixtures/04_input_types/content/: html-page.html  markdown-post.md  yaml-doc.yaml
tests/fixtures/04_input_types/expected/: html-page.html  markdown-post.html  yaml-doc.html
tests/fixtures/05_cascade/: config.yaml
tests/fixtures/05_cascade/data/: menu.yaml
tests/fixtures/05_cascade/expected/: index.html
tests/fixtures/05_cascade/templates/: base.html
tests/fixtures/07_query/: config.yaml
tests/fixtures/07_query/expected/: index.html
tests/fixtures/07_query/templates/: home.html
tests/fixtures/08_archives/archives/: blog.html
tests/fixtures/08_archives/expected/: sitemap.xml
tests/fixtures/08_archives/templates/: sitemap.xml
tests/fixtures/08_generators/expected/: sitemap.xml
tests/fixtures/08_generators/generators/: blog.html  sitemap.xml
tests/fixtures/09_wikilinks/content/: perma.md
tests/fixtures/09_wikilinks/expected/: perma.html
tests/fixtures/10_backlinks/content/: a.md  b.md  c.md
tests/fixtures/10_backlinks/expected/: b.html  c.html
tests/fixtures/10_backlinks/templates/: base.html
tests/fixtures/11_macros/content/: post.md
tests/fixtures/11_macros/expected/: post.html
tests/fixtures/11_macros/templates/: base.html
tests/fixtures/12_scaffold/expected/: backlinks.html  digital-garden.html  feed.xml  index.html  sitemap.xml  style.css  wikilinks.html
tests/fixtures/13_defaults/: config.yaml
tests/fixtures/13_defaults/content/: about.md
tests/fixtures/14_query_omit/: config.yaml
tests/fixtures/15_collections_groups/: config.yaml
tests/fixtures/15_collections_taxonomies/: config.yaml
tests/fixtures/16_taxonomies/: config.yaml
tests/fixtures/17_drafts/: config.yaml
tests/fixtures/18_collection_self_exclude/: config.yaml
tests/fixtures/19_related/: config.yaml
tests/fixtures/22_alias_collision/: config.yaml
tests/fixtures/23_auto_archives/: config.yaml
(+86 files in other folders)
