[package]
name = "mug"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
comrak = { version = "0.52", features = ["syntect"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
tera = "1"
rayon = "1"
slug = "0.1"
globset = "0.4"
notify-debouncer-mini = "0.4"
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
insta = "1"

[profile.release]
lto = "thin"
codegen-units = 1
