[package]
name = "italic"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Gordon Brander"]
description = "A static site generator for creatives"
documentation = "https://docs.rs/italic"
homepage = "https://github.com/gordonbrander/italic"
repository = "https://github.com/gordonbrander/italic"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["static-site", "ssg", "markdown", "blog", "digital-garden"]
categories = ["command-line-utilities", "web-programming", "text-processing"]
exclude = [
    "plan.md",
    "spec.md",
    "TODO.md",
    "docs/",
    ".github/",
    ".claude/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
comrak = { version = "0.52", features = ["syntect"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
tera = "1"
rayon = "1"
slug = "0.1"
globset = "0.4"
notify-debouncer-mini = "0.4"
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
insta = "1"

[profile.release]
lto = "thin"
codegen-units = 1
